更新：新增 GitHub Actions 自动化构建完整调试过程（ARouter kapt 崩溃修复、permissions 权限修复、APK 路径修复）